[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.8"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/etiles"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.8" }
epoint = { version = "0.0.1-alpha.8" }
eproj = { version = "0.0.1-alpha.8" }

clap = "4.5.42"
thiserror = "2.0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nalgebra = "0.34.0"
serde = "1.0.219"
serde_json = "1.0.142"
serde_repr = "0.1.20"
bincode = "2.0.1"
bitvec = "1.0.1"
palette = "0.7.6"
strum = "0.27.2"
strum_macros = "0.27.2"
tar = "0.4.44"
chrono = "0.4.41"
rayon = "1.10.0"
log = "0.4.27"
gltf = "1.4.1"
gltf-json = "1.4.1"
bytemuck = "1.23.1"
