[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.9"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/etiles"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.9" }
epoint = { version = "0.0.1-alpha.9" }
eproj = { version = "0.0.1-alpha.9" }

clap = "4.5.50"
thiserror = "2.0.17"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
nalgebra = "0.34.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
bincode = "2.0.1"
bitvec = "1.0.1"
palette = "0.7.6"
strum = "0.27.2"
strum_macros = "0.27.2"
tar = "0.4.44"
chrono = "0.4.42"
rayon = "1.11.0"
gltf = "1.4.1"
gltf-json = "1.4.1"
bytemuck = "1.24.0"
