[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.2-alpha.1"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/etiles"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[workspace.dependencies]
ecoord = { version = "0.0.2-alpha.1" }
epoint = { version = "0.0.2-alpha.1" }
eproj = { version = "0.0.2-alpha.1" }

clap = "4.5.58"
thiserror = "2.0.18"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
nalgebra = "0.34.1"
serde = "1.0.228"
serde_json = "1.0.149"
serde_repr = "0.1.20"
bincode = "2.0.1"
bitvec = "1.0.1"
palette = "0.7.6"
strum = "0.27.2"
strum_macros = "0.27.2"
tar = "0.4.44"
chrono = "0.4.43"
rayon = "1.11.0"
gltf = "1.4.1"
gltf-json = "1.4.1"
bytemuck = "1.25.0"
