[package]
name = "etiles-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing 3D Tiles data."


[dependencies]
etiles = { version = "0.0.1-alpha.9", path = "../etiles" }

eproj = { workspace = true }
epoint = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "etiles"
path = "src/main.rs"
